--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -139,7 +139,7 @@
         .gantt-header { display:flex; border-bottom:1px solid #e9ecef; background:#f8f9fa; position:sticky; top:0; z-index:10; }
         .gantt-time-label { width:50px; flex-shrink:0; padding:8px 2px; text-align:center; font-size:11px; font-weight:600; color:#666; border-right:1px solid #e9ecef; }
         .gantt-time-label.current { background:#667eea; color:white; }
-        .gantt-member-col { width:90px; flex-shrink:0; padding:10px 6px; font-weight:600; font-size:11px; background:#f8f9fa; border-right:1px solid #e9ecef; position:sticky; left:0; z-index:5; }
+        .gantt-member-col { width:90px; flex-shrink:0; padding:10px 6px; font-weight:600; font-size:16px; background:#f8f9fa; border-right:1px solid #e9ecef; position:sticky; left:0; z-index:5; }
         .gantt-body { min-height:80px; }
         .gantt-row { display:flex; border-bottom:1px solid #f0f0f0; min-height:120px; }
         .gantt-row:hover { background:#f8f9ff; }
@@ -150,7 +150,7 @@
         .gantt-row .gantt-member-col .member-name-text { overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
         .gantt-cell { width:50px; flex-shrink:0; border-right:1px solid #f0f0f0; position:relative; }
         .gantt-cell.current { background:rgba(102,126,234,0.08); }
-        .gantt-bar { position:absolute; top:8px; bottom:8px; border-radius:0; display:flex; align-items:center; padding:0 8px; font-size:13px; font-weight:600; color:white; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; box-shadow:0 2px 4px rgba(0,0,0,0.2); z-index:2; cursor:pointer; transition: opacity 0.2s, filter 0.2s; }
+        .gantt-bar { position:absolute; top:8px; bottom:8px; border-radius:0; display:flex; align-items:center; padding:0 8px; font-size:20px; font-weight:700; color:white; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; box-shadow:0 2px 4px rgba(0,0,0,0.2); z-index:2; cursor:pointer; transition: opacity 0.2s, filter 0.2s; }
         .gantt-bar:hover { filter: brightness(1.1); }
         .gantt-bar.active { animation:ganttPulse 2s infinite; }
         .gantt-bar.filtered-out { opacity: 0.15; }
@@ -979,29 +979,22 @@
         }
     }
 
-    function updateGanttFilter() {
-        const badgeEl = document.getElementById('ganttFilterBadge');
-        if (badgeEl) {
-            if (ganttFilterTask) {
-                const icon = getTaskIcon(ganttFilterTask);
-                const color = getTaskColor(ganttFilterTask);
-                badgeEl.innerHTML = `<div class="gantt-filter-badge" style="background:${color};">
-                    ${icon} ${ganttFilterTask} を表示中
-                    <button class="clear-btn" onclick="clearGanttFilter()">×</button>
-                </div>`;
-            } else {
-                badgeEl.innerHTML = '';
-            }
-        }
-
-        document.querySelectorAll('.gantt-bar').forEach(bar => {
-            if (ganttFilterTask && bar.dataset.task !== ganttFilterTask) {
-                bar.classList.add('filtered-out');
-            } else {
-                bar.classList.remove('filtered-out');
-            }
-        });
+function updateGanttFilter() {
+    const badgeEl = document.getElementById('ganttFilterBadge');
+    if (badgeEl) {
+        // 何も表示しない
+        badgeEl.innerHTML = '';
     }
+
+    document.querySelectorAll('.gantt-bar').forEach(bar => {
+        if (ganttFilterTask && bar.dataset.task !== ganttFilterTask) {
+            bar.classList.add('filtered-out');
+        } else {
+            bar.classList.remove('filtered-out');
+        }
+    });
+}
+
 
     function renderRecordList(listId, summaryId, recs, showAdd) {
         const listEl = document.getElementById(listId), summaryEl = document.getElementById(summaryId);
