--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -209,6 +209,40 @@
         @media (min-width: 769px) {
             .mobile-member-select { display: none; }
         }
+        .member-status-list{
+  display:grid;
+  grid-template-columns:repeat(2,minmax(0,1fr)); /* 横2列 */
+  gap:8px;
+}
+
+@media(max-width:800px){
+  .member-status-list{
+    grid-template-columns:1fr; /* 狭い画面では1列 */
+  }
+}
+.task-row{
+  display:grid;
+  grid-template-columns:auto 80px 1fr auto; /* ● / ラベル / バー / 値 */
+  align-items:center;
+  gap:6px;
+  font-size:11px;
+  margin-top:2px;
+}
+.task-label{
+  width:80px;               /* 固定幅にしてバーの開始位置を揃える */
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  color:#e5e7eb;
+}
+.task-bar-wrap{
+  width:100%;
+  height:10px;
+  border-radius:0;
+  background:#020617;
+  overflow:hidden;
+}
+
     </style>
 </head>
 <body>
