--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>タイムトラッカー</title>
+    <title>日報入力</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; background: #f0f2f5; min-height: 100vh; font-size: 16px; }
@@ -249,7 +249,7 @@
     <div class="container">
         <div class="header">
             <div>
-                <h1>⏱️ タイムトラッカー</h1>
+                <h1>⏱️ 日報入力</h1>
                 <div id="todayDate" style="font-size:13px;opacity:0.9;margin-top:4px;"></div>
             </div>
             <div class="sync-status disconnected" id="syncStatus">未接続</div>
@@ -1757,7 +1757,7 @@ function openAddModal(startOverride, endOverride) {
         const data={members,customTasks,customIcons,records,activeTimers,taskList,breakList,exported:new Date().toISOString()};
         const a=document.createElement('a');
         a.href=URL.createObjectURL(new Blob([JSON.stringify(data,null,2)],{type:'application/json'}));
-        a.download=`タイムトラッカー_${formatDate(new Date())}.json`;
+        a.download=`日報入力_${formatDate(new Date())}.json`;
         a.click();
         toast('✓ エクスポート');
     }
