--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -548,6 +548,10 @@
             activeTimers= JSON.parse(localStorage.getItem('tt_activeTimers') || '{}');
             taskList    = JSON.parse(localStorage.getItem('tt_taskList')     || '[]');
             breakList   = JSON.parse(localStorage.getItem('tt_breakList')    || '[]');
+                    currentMember =
+            JSON.parse(localStorage.getItem('tt_currentMember')) ||
+            members[0] ||
+            null;
         } catch(e){}
     }
 
@@ -560,6 +564,7 @@
         localStorage.setItem('tt_activeTimers', JSON.stringify(activeTimers));
         localStorage.setItem('tt_taskList',     JSON.stringify(taskList));
         localStorage.setItem('tt_breakList',    JSON.stringify(breakList));
+        localStorage.setItem('tt_currentMember', JSON.stringify(currentMember));
 
         // Firestoreへ即同期（Firestore→ローカル反映中はスキップ）
         if (!fbUpdating) {
@@ -589,7 +594,7 @@
                 const taskInfo = isRunning
                     ? `<div class="member-task">${ICONS[timer.task]||'📋'} ${timer.task}</div>`
                     : '<div class="member-task idle">待機中</div>';
-                return `<div class="member-list-item ${isActive ? 'active' : ''}" onclick="currentMember='${m}';render();">
+                return `<div class="member-list-item ${isActive ? 'active' : ''}" onclick="setCurrentMember('${m}')">
                     <div class="member-info">
                         <span class="member-name">${m}</span>
                         ${taskInfo}
@@ -611,6 +616,14 @@
         const nameEl = document.getElementById('currentMemberName');
         if (nameEl && currentMember) nameEl.textContent = `- ${currentMember}`;
     }
+function setCurrentMember(m) {
+    currentMember = m;
+
+    // 端末ごとに記憶する
+    localStorage.setItem('tt_currentMember', JSON.stringify(currentMember));
+
+    render();
+}
 
     function renderTaskButtons() {
         const el = document.getElementById('taskButtons');
