--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -267,9 +267,10 @@
                     <div id="memberList2"></div>
                 </div>
                 <div class="tracker-center">
-                    <div class="mobile-member-select">
-                        <select id="mobileMemberSelect" onchange="currentMember=this.value;render();"></select>
-                    </div>
+<div class="mobile-member-select">
+    <select id="mobileMemberSelect" onchange="setCurrentMember(this.value)"></select>
+</div>
+
                     <div id="pendingTasksAlert"></div>
                     <div class="timer-bar" id="timerBar">
                         <div style="display:flex;align-items:center;">
@@ -520,10 +521,13 @@
             document.querySelectorAll('.tab-content').forEach(x => x.classList.remove('active'));
             t.classList.add('active');
             document.getElementById(t.dataset.tab).classList.add('active');
+            
             render();
         });
 
+            if (!currentMember) {
         currentMember = members[0] || null;
+    }
         document.getElementById('todayDate').textContent = new Date().toLocaleDateString('ja-JP',{year:'numeric',month:'long',day:'numeric',weekday:'short'});
         document.getElementById('historyDate').value = formatDate(new Date());
         const todayStr = formatDate(new Date());
@@ -618,10 +622,8 @@
     }
 function setCurrentMember(m) {
     currentMember = m;
-
     // 端末ごとに記憶する
     localStorage.setItem('tt_currentMember', JSON.stringify(currentMember));
-
     render();
 }
 
